@@ -1,3 +1,14 @@
+2006-03-12  Ville Vainio  <vivainio@gmail.com>
+
+	* Magic.py (magic_timeit): Added %timeit magic, contributed by
+	Torsten Marek.
+
+2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/Magic.py (magic_macro): fix so that the n1-n2 syntax for
+	line ranges works again.
+
+
 2006-03-12  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/Magic.py (magic_macro): fix so that the n1-n2 syntax for
